Version 3.2.3.2 (2009-05-xx)
	Fixed bug on IE 8 where it would sometimes produce a "1 item remaining" status message that would never finish.
	Fixed bug on Safari 4 beta that would produce DOM Range exceptions on the DOMUtils split method since the browser has a bug.
	Fixed bug where the paste plugin could accidentally think that some word sentences was supposed to be list elements.
Version 3.2.3.1 (2009-05-05)
	Fixed bug where paragraphs containing form elements such as input or textarea would be removed.
	Fixed bug where some IE versions would produce a wrapper function for events attributes.
	Fixed bug where table cell contents could be removed if you pressed return/enter at the end of the cell contents.
	Fixed bug where the paste plugin would remove a extra character if the selection range was collapsed.
	Fixed bug where creating tables with % width wouldn't be handled correctly on WebKit browsers.
Version 3.2.3 (2009-04-23)
	Added new paste plugin logic. This new version will autodetect Word contents and clean it up.
	Added a optional root element argument to getPos so you can tell it where to stop the calculation.
	Added new DOM ready logic to remove the usage of document.write. We now use basically the same method as jQuery.
	Fixed bug where WebKit browsers would fail when selecting all contents in the area using Ctrl+A.
	Fixed bug where IE would produce paragraphs with empty inline style elements.
	Fixed bug where WebKit browsers would fail when inserting tables with a non pixel width.
	Fixed bug where block elements could get a redundant br element at the end of the element.
	Fixed bug where the tabfocus plugin only worked with a single editor instance on page.
	Fixed bug where IE 8 was loosing caret position if the selection was collapsed and a menu was clicked.
	Fixed bug with application/xhtml+xml mode where menus wasn't working properly.
	Fixed bug where the onstop workaround fix for IE would produce errors in an ASP update panel.